--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   </head>
-  <body>
+  <body class="overflow-x-hidden">
     <div id="root"></div>
     <!--
       This HTML file is a template.
